fix(main-page): z-index for menu user

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -52,6 +52,7 @@ html {
     top: 100%;
     background-color: var(--var-graphite);
     border-radius: 10px;
+    z-index: 1;
 }
 
 .user-menu__item {
